--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 Go to <a href="https://github.com/rdp-studio/wenyan-book/releases/latest">This link</a> To Downnload.<br>
-<span><strong id="cnt-downloads"></strong> <span>downloads of<br> this release</span>
+<span><strong id="cnt-downloads">Connecting github api to get </strong> <span>downloads of this release</span>
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript">
     function humanise(n){
